--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=c237a8880e02dc97b75377fc21003410
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@Lex15041978@127.0.0.1:3306/wild-series?serverVersion=8.0"
 ###< doctrine/doctrine-bundle ###
