--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,8 @@
         "symfony/web-link": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.11",
         "symfony/yaml": "5.3.*",
+        "symfonycasts/reset-password-bundle": "^1.8",
+        "symfonycasts/verify-email-bundle": "^1.5",
         "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^3.3",
         "twig/twig": "^2.12|^3.0"
